--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en"
 title                    : "RoboKoding OÜ"
 title_separator          : "-"
 name                     : "RoboKoding OÜ"
-description              : "RoboKoding OÜ homepage"
+description              : "Toys to teach the basics of science, technology and engineering to children"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "robokoding/robokoding.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -84,7 +84,7 @@ author:
   avatar           : "/assets/images/silver.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I love breaking, creating and fixing things."
   location         : "Skopje"
-  email            : "silver.kuusik@gmail.com"
+  email            : "silver@robokoding.com"
   uri              :
   bitbucket        :
   codepen          :
