--- a/_config.yml
+++ b/_config.yml
@@ -58,11 +58,13 @@ yandex_site_verification :
 github:
   username               : "robokoding"
 twitter:
-  username               :
+  username               : "robokoding"
 facebook:
-  username               :
+  username               : "RoboKoding-685457641509474"
   app_id                 :
   publisher              :
+google_plus:
+  username               : "113777569723708954777"
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
