--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ zip_code: 85009
 country: Estonia
 phone: (+39) 392 1309473
 
+# menu/nav pages
+nav-pages: ["About"]
+
 # homepage tiles
 tiles-pages: ["Workshops", "Kits"] # which pages to show
 tiles-source: pages # accepts "posts" or "pages"
