--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: RoboKoding
-subtitle: Learn the basics of programming and electronics.
+subtitle: The basics of programming and robotics.
 email: info@robokoding.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
