--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ city:
 state: Pärnu maakond
 zip_code: 85009
 country: Estonia
-phone: (+39) 392 1309473
+phone: (+372) 55600515
 
 # menu/nav pages
 nav-pages: ["Workshops", "Courses", "Remote Labs", "Kits", "Consulting", "Training", "About Us"]
