--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_url: https://github.com/robokoding
 gitlab_url:
 googleplus_url: https://plus.google.com/communities/113777569723708954777
 instagram_url: https://www.instagram.com/robokoding/
-linkedin_url: https://www.linkedin.com/company/17930105/
+linkedin_url: https://www.linkedin.com/company/robokoding-o%C3%BC
 pinterest_url:
 slack_url:
 twitter_url: https://twitter.com/robokoding
