--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 legal: RoboKoding LLC
 author:
-street_address: Kesa tee 5
-city:
-state: Pärnu maakond
-zip_code: 85009
+street_address: Akadeemia tee 21/1, 5th floor
+city: Tallinn
+state:
+zip_code: 12618
 country: Estonia
 phone: (+372) 55600515
 
