--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: The basics of programming and robotics.
 email: info@robokoding.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-legal: RoboKoding LLC
+legal: RoboKoding LTD
 author:
 street_address: Akadeemia tee 21/1, 5th floor
 city: Tallinn
