--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: "" # the base hostname & protocol for your site
 legal: RoboKoding LTD
 author:
 street_address: Kesa tee 5-1
-city: Parnumaa
-state: Tori vald
+city: Tori vald
+state: Tammiste küla
 zip_code: 85009
 country: Estonia
 phone: (+372) 55600515
