update address & email

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # site settings
 title: RoboKoding
 subtitle: The basics of programming and robotics.
-email: info@robokoding.com
+email: letstalk@robokoding.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 legal: RoboKoding LTD
 author:
 street_address: Kesa tee 5-1
-city: Tori vald
-state: Tammiste küla
+city: Pärnumaa
+state: Tori vald
 zip_code: 85009
 country: Estonia
 phone: (+372) 55600515
@@ -26,7 +26,7 @@ tiles-count: 2
 facebook_url: https://www.facebook.com/robokoding
 github_url: https://github.com/robokoding
 gitlab_url:
-googleplus_url: https://plus.google.com/communities/113777569723708954777
+googleplus_url:
 instagram_url: https://www.instagram.com/robokoding
 linkedin_url: https://www.linkedin.com/company/robokoding
 pinterest_url:
