update phone number

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ city: Pärnumaa
 state: Tori vald
 zip_code: 85009
 country: Estonia
-phone: (+372) 55600515
+phone: (+49) 176 97888820
 
 # menu/nav pages
 nav-pages: ["Workshops", "Kits", "About Us"]
